--- a/nandi-frontend/package.json
+++ b/nandi-frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "axios": "^1.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
