Add claymorphism-css dependency and enhance chat components with message history management. Update ChatManager and MarsChat to support message updates and improve user experience with chat themes.

--- a/nandi-frontend/package.json
+++ b/nandi-frontend/package.json
@@ -6,6 +6,7 @@
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "axios": "^1.8.3",
+    "claymorphism-css": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
