--- a/nandi-ai-service/.env.example
+++ b/nandi-ai-service/.env.example
@@ -1,19 +1,14 @@
-# Application settings
-DEBUG=True
-HOST=0.0.0.0
+# OpenAI API key for chat completions
+OPENAI_API_KEY=your_openai_api_key_here
+
+# API key for authenticating requests
+API_KEY=your_api_key_here
+
+# Server port
 PORT=8000
 
-# CORS settings
-CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+# Environment (development/production)
+ENVIRONMENT=development
 
-# OpenAI settings
-OPENAI_API_KEY=your_openai_api_key_here
-DEFAULT_MODEL=gpt-4
-
-# Redis settings
-REDIS_HOST=localhost
-REDIS_PORT=6379
-
-# Celery settings
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0 
+# Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL=INFO 
