--- a/nandi-ai-service/requirements.txt
+++ b/nandi-ai-service/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.103.1
-uvicorn==0.23.2
-pydantic==2.3.0
-openai==0.28.0
-python-dotenv==1.0.0
+fastapi==0.110.0
+uvicorn==0.27.1
+pydantic==2.6.3
+pydantic-settings==2.2.1
+openai==1.14.1
+python-dotenv==1.0.1
+slowapi==0.1.9
+psutil==5.9.8
 requests==2.31.0
 celery==5.3.4
 redis==5.0.0
