Remove outdated models and classes related to chat interactions, quests, and user management from the Nandi API. Update README.md to clarify environment configuration, including the requirement for an OpenAI API key and improved server management instructions. Adjust application properties for database and AI service configurations to enhance clarity and maintainability.

--- a/nandi-api/src/main/resources/application.properties
+++ b/nandi-api/src/main/resources/application.properties
@@ -7,15 +7,15 @@ quarkus.http.cors.origins=http://localhost:3000
 # Database configuration
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=nandi
-quarkus.datasource.password=nandi
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/nandi
+quarkus.datasource.password=nandi_password
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/nandi_db
 quarkus.hibernate-orm.database.generation=update
 
 # Redis configuration
 quarkus.redis.hosts=redis://localhost:6379
 
 # Python AI service configuration
-ai.service.url=http://localhost:8000
+ai.service.url=http://localhost:5005
 
 # Logging configuration
 quarkus.log.level=INFO
